--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: "22"
 
       - name: Install dependencies
-        run: npm cli
+        run: npm ci
       
       - name: Run linter
         run: npm run lint
@@ -31,7 +31,7 @@ jobs:
           node-version: "22"
 
       - name: Install dependencies
-        run: npm cli
+        run: npm ci
 
       - name: Run test
         run: npm run test
