--- a/.github/workflows/second-workflow.yml
+++ b/.github/workflows/second-workflow.yml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Print the issue details
-        run: echo "${{fromJson(github)}}"
+        run: echo "${{toJson(github)}}"
 
